changes in the folder name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 kafka.bootstrap.servers=localhost:9092
+
+#Mongo Config
+
+spring.data.mongodb.uri = mongodb+srv://eshwara:<password>@babysand-q5o4i.mongodb.net/test?retryWrites=true
+spring.data.mongodb.database = test
